[package]
name = "freebox"
version = "0.1.0"
authors = ["François Mockers <mockersf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = [ "json" ] }
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
hmac-sha1 = "0.1"
hocon = "0.3"
anyhow = "1.0"
thiserror = "1.0"
clap = { git = "https://github.com/clap-rs/clap" }
rand = "0.7"

tokio = { version = "0.2", features = ["macros"] }

actix-web = "2.0"
actix-rt = "1.1"
